ms-user/infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-user-deployment
  labels:
    app: ms-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-user
  template:
    metadata:
      labels:
        app: ms-user
    spec:
      containers:
        - name: ms-user
          image: drampel/ms-user
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
