ms-user/infra/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ms-user
spec:
  containers:
  - image: drampel/ms-user
    name: ms-user
    ports:
    - containerPort: 8080
      protocol: TCP
