ms-user/infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-user-loadbalancer
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ms-user
